--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,11 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "CommonJS",
-    "outDir": "dist",
-    // "rootDir": "./src",
-    "strict": true,
+    "target": "esnext",
+    "module": "commonjs",
+    "rootDir": ".",
+    "outDir": "./dist",
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "typeRoots": [
-      "./node_modules/@types",
-      "./src/types"
-    ]
+    "strict": true
   },
-  "include": [
-    "src",
-    "tests"
-, "server.ts"  ]
+  "include": ["src/**/*", "index.ts"]
 }
